# thesis-archive

./: README.md  spawn_node_and_measure.sh  start_workflow.sh  thesis_writeup.docx  update_config_files.py
TEST_TWO_NODES/: workflow.json
accelerometer_class_workflow/: workflow.json
accelerometer_class_workflow/functions/classify/: Cargo.toml
accelerometer_class_workflow/functions/classify/src/: lib.rs
accelerometer_class_workflow/functions/extract_features/: Cargo.toml
accelerometer_class_workflow/functions/extract_features/src/: lib.rs
accelerometer_class_workflow/functions/generate_samples/: Cargo.toml
accelerometer_class_workflow/functions/generate_samples/src/: lib.rs
accelerometer_classification_workflow/: workflow.json
accelerometer_classification_workflow/functions/classify/: Cargo.toml  classify.wasm  function.json
accelerometer_classification_workflow/functions/classify/src/: lib.rs
accelerometer_classification_workflow/functions/extract_features/: Cargo.toml  extract_features.wasm  function.json
accelerometer_classification_workflow/functions/extract_features/src/: lib.rs
accelerometer_classification_workflow/functions/generate_samples/: Cargo.toml  function.json  generate_samples.wasm
accelerometer_classification_workflow/functions/generate_samples/src/: lib.rs
accelerometer_classification_workflow/functions/handle_class_result/: Cargo.toml  function.json  handle_class_result.wasm
accelerometer_classification_workflow/functions/handle_class_result/src/: lib.rs
delegated_orchestrator/: Cargo.toml  config.json
delegated_orchestrator/src/: lib.rs  network_aware_orchestrator.rs  old.txt
edgeless_RPI_build_ready/: node_modified.toml
edgeless_RPI_build_ready/functions/add_10/src/: lib.rs
edgeless_RPI_build_ready/functions/add_1000/: function.json
edgeless_RPI_build_ready/functions/sensor_simulator_add/: Cargo.toml
latency_measurement/: config.json
latency_measurement/src/: main.rs
node_to_orc_latency_measurement/: config.json
node_to_orc_latency_measurement/src/: main.rs
orc_to_node_latency_measurement/: Cargo.toml  nodes_addresses.json
orc_to_node_latency_measurement/src/: main.rs
test_functions/add_10/: add_10.wasm
test_functions/add_100/: add_100.wasm  function.json
test_functions/add_1000/: Cargo.toml  add_1000.wasm
test_functions/http_read_strings/: http_read_strings.wasm
test_functions/http_read_strings/src/: lib.rs
test_functions/http_write_boolean/: http_write_boolean.wasm
test_functions/http_write_boolean/src/: lib.rs
test_functions/sensor_simulator_add/: sensor_simulator_add.wasm
test_functions/string_in_text/: function.json
tests/TEST_HTTP_WORKFLOW/: workflow.json
tests/add_10/: Cargo.toml  function.json
tests/add_100/: Cargo.toml
tests/add_100/src/: lib.rs
tests/add_1000/src/: lib.rs
tests/http_read_strings/: Cargo.toml  function.json
tests/http_write_boolean/: Cargo.toml  function.json
tests/sensor_simulator_add/: function.json
tests/sensor_simulator_add/src/: lib.rs
tests/string_in_text/: Cargo.toml  string_in_text.wasm
tests/string_in_text/src/: lib.rs
