[workspace]

[profile.dev]
panic = "abort"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1
strip = true

[package]
name = "add_10"
version = "0.1.0"
edition = "2021"

[lib]
name = "add_10"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
edgeless_function = { path = "../../edgeless_function" }
serde = {version="1", features=["derive"] }
serde_json = "1"
log = "0.4"
