[workspace]

[profile.dev]
panic = "abort"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1
strip = true

[package]
name = "http_read_strings"
version = "0.1.0"
authors = ["Marco Imbelli Cai"]
edition = "2021"

[lib]
name = "http_read_strings"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
edgeless_http = { path = "../../edgeless_http" }
edgeless_function = { path = "../../edgeless_function" }
serde = {version="1", features=["derive"]}
serde_json = "1"
log = "0.4"
