[workspace]

[profile.dev]
panic = "abort"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1
strip = true

[package]
name = "string_in_text"
version = "0.1.0"
authors = ["Marco Imbelli Cai"]
edition = "2021"

[lib]
name = "string_in_text"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
edgeless_function = { path = "../../edgeless_function" }
serde = {version="1", features=["derive"]}
serde_json = "1"
log = "0.4"
