[workspace]

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "z"
panic = "abort"
codegen-units = 1
strip = true

[package]
name = "generate_samples"
version = "0.1.0"
edition = "2021"

[lib]
name = "generate_samples"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
edgeless_function = { path = "../../../edgeless_vm_build_ready/edgeless_function" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
